err/collective.migrator.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/collective'...
Listing './lib/python3.5/site-packages/collective/migrator'...
Compiling './lib/python3.5/site-packages/collective/migrator/migrator.py'...
***   File "./lib/python3.5/site-packages/collective/migrator/migrator.py", line 40
    exec urllib2.urlopen(BOOTSTRAP_URL).read() in ez
               ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/collective/migrator/recipes'...
Listing './lib/python3.5/site-packages/collective/migrator/scripts'...
Compiling './lib/python3.5/site-packages/collective/migrator/scripts/content.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (content.py, line 66)
Listing './lib/python3.5/site-packages/collective/migrator/templates'...
Listing './lib/python3.5/site-packages/collective/migrator/tests'...
Listing './lib/python3.5/site-packages/collective.migrator-1.8.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
